File Name: CHANGES

07/03/2020 FASP 2.5.3:
- Modify test problems.
- Skip comments in the beginning of data files.
- When reading CSR matrix starting from 1, shift by -1.
- Ignore ex and mk files from git.
- A possible bug: test.ex, problem 14, W-cycle?

05/16/2020 FASP 2.5.2:
- Add VS19 solution.
- Fix encoding warning in VS19.
- Fix problems with Intel compiler 2020.1 version.

05/07/2020 FASP 2.5.1:
- Fix UMFPACK test run problem.
- Fix METIS module.
- Fix CHOLMOD module.
- Add general cycling type on each level.

01/20/2020 FASP 2.5.0:
- Migrate from BitBucket to GitHub!

01/20/2020 FASP 2.2.0:
- Update cmake behavoir due to cmake changes since 3.14.1.
- Test new version on OS X 10.14.6, RedHat 4.8.5; need more tests.
- Fix warnings for fscanf in Ubuntu.
- Update webpage, documentation, and user guide.
- Fix a mistake in User Guide.
- Update Fortran wrapper for direct solver.

01/26/2019 FASP 2.1.1:
- Find a problem when users try to free precond_data.
- Fix a memory leakage problem in tutorial/poisson-pcg.c.
- Change matrix format in fasp_dcoo_read1, make it consistent with fasp_dcoo_read.
- Update VS setting and use VS2015 as default.
- Update documentation and webpage.
- Update push script for multigrid.org.

08/04/2018 FASP 2.1.0:
- Fix OpenMP problem with FASP1.
- Fix a typo in KryPvfgmres.c.
- Update regression results.
- Update FD for Poisson/Heat example.
- Update to new Xcode setting.
- Update refman.pdf and webpage.
- Move official webpage to multigrid.org/fasp.
- Check compiling order from cmake. 

04/11/2018 FASP 2.0.9:
- Update Fortran wrappers: add a new one.
- Update Fortran wrapper function names; update examples accordingly.
- Clean up BLC preconditioners and solvers.
- Fix a few wrong function names. 
- Fix a memory problem in BSR SA method.
- Find more problems with BSR AMG methods; to fix.
- Check 'cannot allocate memory' warning in VFGMRes.
- Fix a policy problem for older CMAKE versions.

03/24/2018 FASP 2.0.8: